# grasp_world

./: .gitignore  README.md  foo.xyz  pyproject.toml  test.py  test.xyz  test_opt.py  viz.py  vizz.py
assets/hand/shadow_hand/: shadow_hand.urdf  shadow_hand_origin.urdf  shadowhand_sphere_database.json
grasp_world/: constants.py
grasp_world/network/: sdf_net.py  velocity_net.py
grasp_world/pointnet/: __init__.py  pointnet2.py  pointnet2_encoder.py  pointnet2_utils.py
grasp_world/robo/: handmodel.py
grasp_world/utils/: hand_utils.py  sdf.py  sphere_model_utils.py  torch_utils.py  utils.py  viz_ui.py
playground/: flow_matching_knn_demo.py  flow_matching_linear.py  inspect_mesh.py  lsb_demo.py  sdf_blending_demo.py
scripts/: download_primitive_asset.sh
tmp_points/: cloud_0.ply  cloud_1.ply  cloud_2.ply  network.ply  source.ply  teacher.ply
